# tools

./: .gitignore  GEMINI.md  README.md  equities-order-amalgamation.html  md-to-confluence.html
collaborative-whiteboard/: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json
collaborative-whiteboard/client/: index.html  package.json  tsconfig.json  vite.config.ts
collaborative-whiteboard/client/src/: App.tsx  main.tsx
collaborative-whiteboard/client/src/components/: ErrorBoundary.tsx  PropertiesPanel.tsx  Toolbar.tsx  TopBar.tsx  WhiteboardCanvas.test.tsx  WhiteboardCanvas.tsx
collaborative-whiteboard/client/src/hooks/: useWhiteboardSocket.ts
collaborative-whiteboard/client/src/pages/: Landing.tsx  WhiteboardPage.tsx
collaborative-whiteboard/client/src/state/: whiteboardStore.test.ts  (+1 more)
collaborative-whiteboard/server/: package.json  tsconfig.json
collaborative-whiteboard/server/src/: index.ts  roomStore.test.ts  roomStore.ts
collaborative-whiteboard/shared/: package.json  tsconfig.json
collaborative-whiteboard/shared/src/: types.test.ts  types.ts
demo-modulith-app/: .gitignore  Dockerfile  README.md  mvnw  mvnw.cmd  pom.xml
pdf-to-markdown-converter/: index.html
proxy/: Dockerfile  README.md  pyproject.toml
proxy/app/: __init__.py  __main__.py  api.py  main.py  proxy.py  settings.py  storage.py  utils.py
proxy/app/web/: index.html
proxy/tests/: test_integration.py  test_storage.py
springboot4-demo-project/: Dockerfile  README.md  checkstyle.xml  pom.xml
stock-trading-control-tower-prototype/: index.html
(+37 files in other folders)
